# DIME-ALC-DANN

./: .gitignore  AGENTS.md  NOTES.md  README.md  REFACTOR.md  alc_data.py  assessment.py  baseline.py  create_dataframe.ipynb  data_moving.ipynb  data_moving.py  eda.ipynb  evaluate.py  finetune.py  inference.py  main.py  model.py  params.py  pyproject.toml  train.py  train_script.py
benchmark/: benchmark_dataloader.py
profiling/: profile_training.py
scripts/: create_dataframe.py  data_moving.py
scripts/benchmark/: benchmark_dataloader.py
scripts/profiling/: profile_training.py
utils/: argument_parsing.py  compute_params.py  early_stopping.py  focal_loss.py  gradient_reversal.py  hpo_status.py  layer_creation.py
